--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-baseurl: "http://ycpcs.github.io/cs370-fall2016"
+baseurl: "//ycpcs.github.io/cs370-fall2016"
 markdown: kramdown
 highlighter: rouge
 coursename: "CS 370"
