--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,9 @@
-baseurl: "//ycpcs.github.io/cs370-fall2016"
-markdown: kramdown
-highlighter: rouge
-coursename: "CS 370"
+name: ""
+description: ""
 
+url: "//ycpcs.github.io/cs370-fall2016"
+
+markdown: redcarpet
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
+highlighter: pygments
