--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: ""
 
 url: "//ycpcs.github.io/cs370-fall2016"
 
-markdown: redcarpet
-redcarpet:
+markdown: kramdown
+kramdown:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
-highlighter: pygments
+highlighter: rouge
